--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - run:
           name: Install Dependencies
           command: |
-            bundle exec pod install
+            pod install
 
       # Build and archive the project
       - run:
