--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,45 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
-# For a detailed guide to building and testing on iOS, read the docs:
-# https://circleci.com/docs/testing-ios/
+# .circleci/config.yml
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  build:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#docker-machine-macos-windows-executor
+  build-and-test:
     macos:
-      xcode: 12.5.1 # Specify the Xcode version to use
-
+      xcode: 14.0.1
+    environment:
+      FL_OUTPUT_DIR: output
+      FASTLANE_LANE: test
     steps:
       - checkout
-
-      # Install any dependencies (e.g., CocoaPods)
+      - run: bundle install
       - run:
-          name: Install Dependencies
-          command: |
-            pod install
-
-      # Build and archive the project
-      - run:
-          name: Build and Archive
-          command: xcodebuild archive -workspace ServeSync.xcworkspace -scheme ServeSync -configuration Release -archivePath build/ServeSync.xcarchive
-
-      # Export IPA file
-      - run:
-          name: Export IPA
-          command: xcodebuild -exportArchive -archivePath build/ServeSync.xcarchive -exportPath build -exportOptionsPlist ExportOptions.plist
-
-      # Store IPA file as an artifact
+          name: Fastlane
+          command: bundle exec fastlane $FASTLANE_LANE
       - store_artifacts:
-          path: build/ServeSync.ipa
+          path: output
+      - store_test_results:
+          path: output/scan
+
+  adhoc:
+    macos:
+      xcode: 14.0.1
+    environment:
+      FL_OUTPUT_DIR: output
+      FASTLANE_LANE: adhoc
+    steps:
+      - checkout
+      - run: bundle install
+      - run:
+          name: Fastlane
+          command: bundle exec fastlane $FASTLANE_LANE
+      - store_artifacts:
+          path: output
+
 workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  build-test-adhoc:
     jobs:
-      - build
+      - build-and-test
+      - adhoc:
+          filters:
+            branches:
+              only: development
+          requires:
+            - build-and-test
