SR-85 feat: implement profile UI

--- a/PBL6/GlobalDefine/Info.plist
+++ b/PBL6/GlobalDefine/Info.plist
@@ -4,5 +4,10 @@
 <dict>
 	<key>UIApplicationSceneManifest</key>
 	<dict/>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 </dict>
 </plist>
